remove user groupid